--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
-<body background="assets/img/Prueba-img.png">
+<body background="assets/img/Prueba.png">
 
 <header class="header">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
