Cambios al simulador

--- a/simulador.html
+++ b/simulador.html
@@ -32,7 +32,7 @@
 	<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
-<body background="assets/img/Prueba.png">
+<body>
 
 <header class="header">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -67,12 +67,31 @@
 </header>
 
 <main>
-	<div class="container">
+	<div class="container contaiSim">
+		<h1 class="titule-s">Simulador de Presupuesto</h1>
+	</div>
+	<div class="container contaiSim divis1">
+			<p><b>Selecciona el tipo de pagina deseada:</b></p>
+		<select class="form-select separador" aria-label="Default select example">
+		  <option selected>Una de dos</option>
+		  <option value="1">Sencilla</option>
+		  <option value="2">Elaborada</option>
+		</select>
+		<div class="form-check form-switch separador">
+		  <label class="form-check-label" for="flexSwitchCheckDefault">SEO</label>
+		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+		</div>
+		<div class="form-check form-switch separador">
+		  <label class="form-check-label" for="flexSwitchCheckDefault">Dominio seguro</label>
+		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+		</div>
+		<div class="form-check form-switch separador divis2">Hosting</label>
+		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+		</div>
+	</div>	
 
-		<h1 class="titule-p animate__animated animate__slideInUp">Francisco Vargas</h1>
-		<h1 class="subtitule-p animate__animated animate__slideInDown">/Desarrollador de páginas web_</h1>
-
-		<button type="button" class="btn btn-primary btn-lg btn-ps">Ver más</button>
+	<div class="container contaiSim">
+		<h2>El precio aproximado es de:</h2>
 	</div>
 </main>
 
