Cambios al Simulador

--- a/proyectos.html
+++ b/proyectos.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Codervarg | Home💻 </title>
+	<title>Codervarg | Proyectos💻 </title>
 
 	<!-- Meta description/keywords -->
 
@@ -32,7 +32,7 @@
 	<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
-<body background="assets/img/Prueba.png">
+<body>
 
 <header class="header">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -67,12 +67,8 @@
 </header>
 
 <main>
-	<div class="container">
-
-		<h1 class="titule-p animate__animated animate__fadeInUp">Francisco Vargas</h1>
-		<h1 class="subtitule-p animate__animated animate__fadeInDown">/Desarrollador de páginas web_</h1>
-
-		<button type="button" class="btn btn-primary btn-lg btn-ps">Ver más</button>
+	<div class="container contaiSim">
+		<h1 class="titule-s">Prueba de DOM</h1>
 	</div>
 </main>
 
