--- a/simulador.html
+++ b/simulador.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Codervarg | Home💻 </title>
+	<title>Codervarg | Simulador💻 </title>
 
 	<!-- Meta description/keywords -->
 
@@ -47,7 +47,7 @@
 	          <a class="nav-link" href="#">Contacto</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" aria-current="page" href="#">Proyectos</a>
+	          <a class="nav-link" aria-current="page" href="proyectos.html">Proyectos</a>
 	        </li>
 	        <li class="nav-item dropdown">
 	          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -68,30 +68,80 @@
 
 <main>
 	<div class="container contaiSim">
-		<h1 class="titule-s">Simulador de Presupuesto</h1>
+		<h1 class="titule-s animate__animated animate__fadeInDown">Simulador de Presupuesto</h1>
 	</div>
-	<div class="container contaiSim divis1">
-			<p><b>Selecciona el tipo de pagina deseada:</b></p>
-		<select class="form-select separador" aria-label="Default select example">
-		  <option selected>Una de dos</option>
-		  <option value="1">Sencilla</option>
-		  <option value="2">Elaborada</option>
-		</select>
-		<div class="form-check form-switch separador">
-		  <label class="form-check-label" for="flexSwitchCheckDefault">SEO</label>
-		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-		</div>
-		<div class="form-check form-switch separador">
-		  <label class="form-check-label" for="flexSwitchCheckDefault">Dominio seguro</label>
-		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-		</div>
-		<div class="form-check form-switch separador divis2">Hosting</label>
-		  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-		</div>
-	</div>	
-
-	<div class="container contaiSim">
-		<h2>El precio aproximado es de:</h2>
+	<div class="container contaiSim2">
+		<form class="form-font">
+		  <div class="row mb-3">
+		    <label class="col-sm-2 col-form-label">Nombre</label>
+		    <div class="col-sm-10">
+		      <input type="email" class="form-control" id="inputEmail3">
+		    </div>
+		  </div>
+		  <fieldset class="row mb-3">
+		    <legend class="col-form-label col-sm-2 pt-0">Seleccione el tipo de pagina que desea: </legend>
+		    <div class="col-sm-10">
+		      <div class="form-check">
+		        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+		        <label class="form-check-label" for="gridRadios1">
+		          Sencilla
+		        </label>
+		      </div>
+		      <div class="form-check">
+		        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+		        <label class="form-check-label" for="gridRadios2">
+		          Elaborada
+		        </label>
+		      </div>
+		    </div>
+		  </fieldset>
+		 <div>
+		  <div class="row mb-3">
+		  	<legend class="col-form-label col-sm-2 pt-0">Recomedaciones para mejorar su experiencia: </legend>
+		    <div class="col-sm-10 offset-sm-2">
+		      <div class="form-check">
+		        <input class="form-check-input" type="checkbox" id="gridCheck1">
+		        <label class="form-check-label" for="gridCheck1">
+		          SEO
+		        </label>
+		      </div>
+		      <div class="form-check">
+		        <input class="form-check-input" type="checkbox" id="gridCheck1">
+		        <label class="form-check-label" for="gridCheck1">
+		          Dominio seguro
+		        </label>
+		      </div>
+		      <div class="form-check">
+		        <input class="form-check-input" type="checkbox" id="gridCheck1">
+		        <label class="form-check-label" for="gridCheck1">
+		          Hosting recomendado
+		        </label>
+		      </div>
+		    </div>
+		  </div>
+		 </div>
+		 <div class="row mb-3">
+		  	<legend class="col-form-label col-sm-2 pt-0">Opcionales: </legend>
+		    <div class="col-sm-10 offset-sm-2">
+		      <div class="form-check">
+		        <input class="form-check-input" type="checkbox" id="gridCheck1">
+		        <label class="form-check-label" for="gridCheck1">
+		          Correcciones de errores 24/7
+		        </label>
+		      </div>
+		      <div class="form-check">
+		        <input class="form-check-input" type="checkbox" id="gridCheck1">
+		        <label class="form-check-label" for="gridCheck1">
+		          Vistazo mensual
+		        </label>
+		      </div>
+		    </div>
+		  </div>
+		  <button type="submit" class="btn btn-primary">Calcular presupuesto</button>
+		</form>
+	</div>
+	<div class="container contaiSim3">
+		<h2 class="animate__animated animate__fadeInDown">Su precio aproximado es de: </h2>
 	</div>
 </main>
 
