--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
    </div>
  </footer>
 
- 	<!-- Scripts.js -->
+ 	<!-- Scripts.js & JQuery 3.5.1v-->
+
+ 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="crossorigin="anonymous"></script>
 
  	<script src="js/scripts.js"></script>
 
