--- a/simulador.html
+++ b/simulador.html
@@ -73,7 +73,7 @@
 	<div class="container contaiSim2">
 		<form class="form-font">
 		  <div class="row mb-3">
-		    <label class="col-sm-2 col-form-label">Nombre</label>
+		    <label class="col-sm-2 col-form-label">Nombre:</label>
 		    <div class="col-sm-10">
 		      <input type="name" class="form-control" id="nombre-id">
 		    </div>
@@ -110,7 +110,9 @@
    </div>
  </footer>
 
- 	<!-- Scripts.js -->
+ 	<!-- Scripts.js & JQuery 3.5.1v-->
+
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="crossorigin="anonymous"></script>
 
  	<script src="js/scripts.js"></script>
 
