--- a/simulador.html
+++ b/simulador.html
@@ -73,14 +73,14 @@
 	<div class="container contaiSim2">
 		<form class="form-font">
 		  <div class="row mb-3 space-b">
-		  	<div><img class="signo name-click" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
+		  	<div><img class="signo name-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
 		    <label class="col-sm-2 col-form-label"><b>Nombre:</b></label>
 		    <div class="col-sm-10">
 		      <input type="name" class="form-control" id="nombre-id" placeholder="Ingrese su nombre completo">
 		    </div>
 		  </div>
 		  <fieldset class="row mb-3 space-b">
-		  	<div><img class="signo tipo-click" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
+		  	<div><img class="signo tipo-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
 		    <legend class="col-form-label col-sm-2 pt-0"><b>Seleccione el tipo de pagina que desea:</b></legend>
 		    <div class="col-sm-10">
 			    <select class="form-select" aria-label="Default select example" id="inputPag">
@@ -91,7 +91,7 @@
 			</div>
 		  </fieldset>
 		  <fieldset class="row mb-3 space-b">
-		  	<div><img class="signo plan-click" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
+		  	<div><img class="signo plan-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
 		    <legend class="col-form-label col-sm-2 pt-0"><b>Seleccione un tipo de plan (Hosting):</b></legend>
 		    <div class="col-sm-10">
 			    <select class="form-select" aria-label="Default select example" id="inputPag2">
@@ -104,6 +104,7 @@
 		  <button type="button" class="btn btn-dark" id="boton">¡Calcular presupuesto!</button>
 		</form>
 	</div>
+	<div id="noticias"></div>
 	<div class="container contaiSim3">
 		<h2 class="animate__animated animate__fadeInDown">Su precio aproximado es de: </h2><h2 id="toma-tu-precio"></h2>
 	</div>
