--- a/index.html
+++ b/index.html
@@ -84,6 +84,33 @@
    </div>
  </footer>
 
+ <!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v10.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/es_ES/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your Chat Plugin code -->
+      <div class="fb-customerchat"
+        attribution="setup_tool"
+        page_id="104597911689655"
+  theme_color="#0A7CFF"
+  logged_in_greeting="¡Hola! Espero que tengas un buen día, ¿Cómo puedo ayudarte? "
+  logged_out_greeting="¡Hola! Espero que tengas un buen día, ¿Cómo puedo ayudarte? ">
+      </div>
+
  	<!-- Scripts.js & JQuery 3.5.1v-->
 
  	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="crossorigin="anonymous"></script>
