--- a/proyectos.html
+++ b/proyectos.html
@@ -33,38 +33,39 @@
 
 </head>
 <body>
-
-<header class="header">
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <div class="container">
-	    <a class="navbar-brand titule-nv" href="index.html">/Codervarg_</a>
-	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
-	    <div class="collapse navbar-collapse justify-content-end subtitule-nv" id="navbarSupportedContent">
-	      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-	      	<li class="nav-item">
-	          <a class="nav-link" href="#">Contacto</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" aria-current="page" href="proyectos.html">Proyectos</a>
-	        </li>
-	        <li class="nav-item dropdown">
-	          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-	            Precios
-	          </a>
-	          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="simulador.html">Simulador</a></li>
-	            <li><hr class="dropdown-divider"></li>
-	            <li><a class="dropdown-item" href="#">One-Pages</a></li>
-	            <li><a class="dropdown-item" href="#">Landing-Pages</a></li>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div>
-	  </div>
-	</nav>
-</header>
+	<header class="header">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		  <div class="container">
+			<a class="navbar-brand titule-nv" href="index.html">/Codervarg_</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end subtitule-nv" id="navbarSupportedContent">
+			  <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+				  <li class="nav-item">
+				  <a class="nav-link" href="#">Contacto</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" aria-current="page" href="proyectos.html">Proyectos</a>
+				</li>
+				<li class="nav-item dropdown">
+				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					Precios
+				  </a>
+				  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<li><a class="dropdown-item" href="simulador.html">Simulador</a></li>
+					<li><hr class="dropdown-divider"></li>
+					<li><a class="dropdown-item" href="#">One-Pages</a></li>
+					<li><a class="dropdown-item" href="#">Landing-Pages</a></li>
+				  </ul>
+				</li>
+			  </ul>
+			</div>
+		  </div>
+		</nav>
+	</header>
+    <!-- Link al JS -->
+    <script src="scripts.js"></script>
 
 <main>
 	<div class="container contaiSim">
