--- a/proyectos.html
+++ b/proyectos.html
@@ -43,7 +43,7 @@
 			<div class="collapse navbar-collapse justify-content-end subtitule-nv" id="navbarSupportedContent">
 			  <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
 				  <li class="nav-item">
-				  <a class="nav-link" href="#">Contacto</a>
+				  <a class="nav-link" href="contact.html">Contacto</a>
 				</li>
 				<li class="nav-item">
 				  <a class="nav-link" aria-current="page" href="proyectos.html">Proyectos</a>
@@ -64,12 +64,13 @@
 		  </div>
 		</nav>
 	</header>
+
     <!-- Link al JS -->
     <script src="scripts.js"></script>
 
 <main>
 	<div class="container contaiSim">
-		<h1 class="titule-s">Prueba de DOM</h1>
+		<h1 class="titule-s">Proyectos</h1>
 	</div>
 </main>
 
