--- a/simulador.html
+++ b/simulador.html
@@ -44,7 +44,7 @@
 	    <div class="collapse navbar-collapse justify-content-end subtitule-nv" id="navbarSupportedContent">
 	      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
 	      	<li class="nav-item">
-	          <a class="nav-link" href="#">Contacto</a>
+	          <a class="nav-link" href="contact.html">Contacto</a>
 	        </li>
 	        <li class="nav-item">
 	          <a class="nav-link" aria-current="page" href="proyectos.html">Proyectos</a>
