Agregue el AJAX y JSON con un error por resolver

--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,10 @@
         </div>
     </main>
 
+        <div class="container contaiSim">
+            <button id="info">Conocer mas!</button>
+        </div>
+
     <!-- Script Form -->
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
