--- a/simulador.html
+++ b/simulador.html
@@ -17,6 +17,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 	<!-- Bootstrap CSS -->
 
@@ -32,7 +34,7 @@
 	<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon"/>
 
 </head>
-<body>
+<body style="background-image: url(assets/img/fondo-min.jpg);">
 
 <header class="header">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -76,7 +78,7 @@
 		  	<div><img class="signo name-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
 		    <label class="col-sm-2 col-form-label"><b>Nombre:</b></label>
 		    <div class="col-sm-10">
-		      <input type="name" class="form-control" id="nombre-id" placeholder="Ingrese su nombre completo">
+		      <input type="name" class="form-control inpu" id="nombre-id" placeholder="Ingrese su nombre completo">
 		    </div>
 		  </div>
 		  <fieldset class="row mb-3 space-b">
@@ -101,12 +103,40 @@
 				</select>
 			</div>
 		  </fieldset>
-		  <button type="button" class="btn btn-dark" id="boton">¡Calcular presupuesto!</button>
+		</form>
+	</div>
+	<div class="container contaiSim2">
+		<form class="form-font">
+		  <fieldset class="row mb-3 space-b">
+		  	<div><img class="signo secc-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
+		    <legend class="col-form-label col-sm-2 pt-0"><b>Seleccione la cantidad de secciones que desea para su web:</b></legend>
+		    <div class="col-sm-10">
+			    <select class="form-select" aria-label="Default select example" id="inputPag3">
+				  <option selected value="0">¿Cuantas secciones desea?</option>
+				  <option value="1000">2 o menos</option>
+				  <option value="2500">3</option>
+				  <option value="3000">4</option>
+				  <option value="4500">5 o mas</option>
+				</select>
+			</div>
+		  </fieldset>
+		  <fieldset class="row mb-3 space-b">
+		  	<div><img class="signo seo-click botones" src="assets/img/interrogacion.png" alt="Signo de Interrogacion"></div>
+		    <legend class="col-form-label col-sm-2 pt-0"><b>¿Desea implementar SEO en su pagina web?:</b></legend>
+		    <div class="col-sm-10">
+			    <select class="form-select" aria-label="Default select example" id="inputPag4">
+				  <option selected value="0">SEO</option>
+				  <option value="6000">Si, deseo SEO para mi web</option>
+				  <option value="0">No, no deseo SEO para mi web</option>
+				</select>
+			</div>
+		  </fieldset>
+		  <button type="button" class="btn btn-dark bot" id="boton">¡Calcular presupuesto!</button>
 		</form>
 	</div>
 	<div id="noticias"></div>
-	<div class="container contaiSim3">
-		<h2 class="animate__animated animate__fadeInDown">Su precio aproximado es de: </h2><h2 id="toma-tu-precio"></h2>
+	<div class="container contaiSim4">
+		<h2 class="animate__animated animate__fadeInDown">Su precio aproximado (en ARS) es de: </h2><h2 id="toma-tu-precio"></h2>
 	</div>
 </main>
 
